[package]
name = "condtype"
version = "1.0.0"
edition = "2021"
authors = ["Nikolai Vazquez"]
license = "MIT OR Apache-2.0"
description = "Choose types via boolean conditions."
repository = "https://github.com/nvzqz/condtype"
homepage = "https://github.com/nvzqz/condtype"
documentation = "https://docs.rs/condtype"
categories = ["no-std", "rust-patterns"]
keywords = ["condition", "type", "boolean", "true", "false"]
readme = "README.md"

# Const generics ordered before type generics.
rust-version = "1.59.0"
